deloy-microservices-architecture.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-page
  labels:
    author: abhishek-balaji
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: abhishekbalaji/apps:app1
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  labels:
    author: abhishek-balaji
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-page
  labels:
    author: abhishek-balaji
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec: 
      containers:
        - name: app2
          image: abhishekbalaji/apps:app2
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  labels:
    author: 
      author: abhishek-balaji
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: third-page
  labels:
    author: abhishek-balaji
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          image: abhishekbalaji/apps:app3
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app3-svc
  labels:
    author: abhishek-balaji
spec:
  type: ClusterIP
  selector: 
    app: app3
  ports:
    - port: 80
      targetPort: 80
